# discord-bot

./: .env.sample  .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: bot.py  calendar.py  config.py  database.py  date_utils.py  meeting.py
