[build-system]
build-backend = "pdm.pep517.api"
requires = ["pdm-pep517>=1.0.0"]

[tool.isort]
profile = "black"

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
  "black<22.0,>=21.12b0",
  "flake8<5.0.0,>=4.0.1",
  "pdbpp<1.0.0,>=0.10.3",
]

[tool.pdm.build]
includes = []

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
  {name = "Patrick Arminio", email = "patrick.arminio@gmail.com"},
]
dependencies = [
    "aiocron<2.0,>=1.8",
    "ics<1.0,>=0.7",
    "httpx<1.0.0,>=0.21.3",
    "python-dotenv<1.0.0,>=0.19.2",
    "nextcord<3.0.0.0,>=2.0.0-alpha.6",
    "google-api-python-client<3.0.0,>=2.39.0",
    "google-auth-httplib2<1.0.0,>=0.1.0",
    "google-auth-oauthlib<1.0.0,>=0.5.0",
    "setuptools>=65.5.0",
]
description = ""
license = {text = "MIT"}
name = "discord-bot"
requires-python = ">=3.10,<4.0"
version = "0.1.0"

[project.urls]
